samples/_failures_safe/1761654165_b335d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acd9344a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_acd9344a.c:164:13: error: expected declaration or statement at end of input
  164 |             pos++;
      |             ^~~
./samples/SAFE/__tmp_acd9344a.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_acd9344a.c:164:13: error: expected declaration or statement at end of input
